--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.roomwordssample">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".WordsApplication"
         android:allowBackup="true"
@@ -11,9 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".user.UserDetail"
+            android:exported="false" />
+        <activity
+            android:name=".users.ListUsers"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
